--- a/visual-editor/package.json
+++ b/visual-editor/package.json
@@ -11,10 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "reactflow": "^11.10.3",
-    "zustand": "^4.5.2",
-    "nanoid": "^5.0.7"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
