--- a/visual-editor/package.json
+++ b/visual-editor/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "reactflow": "^11.10.4"
+    "reactflow": "^11.10.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
