--- a/visual-editor/backend/requirements.txt
+++ b/visual-editor/backend/requirements.txt
@@ -1,3 +1,13 @@
 fastapi==0.110.1
 uvicorn[standard]==0.29.0
 pydantic==1.10.14
+
+# Datapizza runtime dependencies
+datapizza-ai-core==0.0.4
+datapizza-ai-parsers-azure==0.0.3
+datapizza-ai-parsers-docling==0.0.4
+datapizza-ai-rerankers-cohere==0.0.2
+datapizza-ai-rerankers-together==0.0.2
+datapizza-ai-tools-sqldatabase==0.0.1
+datapizza-ai-tools-duckduckgo==0.0.3
+datapizza-ai-vectorstores-qdrant==0.0.2
