--- a/visual-editor/backend/requirements.txt
+++ b/visual-editor/backend/requirements.txt
@@ -1,6 +1,11 @@
 fastapi==0.110.1
 uvicorn[standard]==0.29.0
 pydantic==1.10.14
+email-validator==2.1.1
+jsonref==1.1.0
+rich==14.2.0
+opentelemetry-api==1.38.0
+opentelemetry-sdk==1.38.0
 
 # Datapizza runtime dependencies
 datapizza-ai-core==0.0.4
