--- a/visual-editor/backend/requirements.txt
+++ b/visual-editor/backend/requirements.txt
@@ -4,6 +4,8 @@ pydantic==1.10.14
 email-validator==2.1.1
 jsonref==1.1.0
 rich==14.2.0
+httpx==0.27.0
+structlog==24.1.0
 opentelemetry-api==1.38.0
 opentelemetry-sdk==1.38.0
 
