--- a/visual-editor/package.json
+++ b/visual-editor/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-window": "^1.8.10",
@@ -20,11 +21,11 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
-    "jsdom": "^24.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.2.1",
+    "jsdom": "^24.1.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.8",
     "vitest": "^1.6.0",
