--- a/visual-editor/package.json
+++ b/visual-editor/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
+    "jsondiffpatch": "^0.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-window": "^1.8.10",
