--- a/visual-editor/package.json
+++ b/visual-editor/package.json
@@ -15,6 +15,7 @@
     "jsondiffpatch": "^0.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-joyride": "^2.8.3",
     "react-window": "^1.8.10",
     "reactflow": "^11.10.4",
     "zustand": "^5.0.8"
